--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,6 +18,15 @@
   }
 }
 </script>
+<style>
+  @keyframes flash {
+    0% { background-color: rgba(74, 222, 128, 0.3); } /* bg-green-400 with 30% opacity */
+    100% { background-color: transparent; }
+  }
+  .animate-flash {
+    animation: flash 1.5s ease-out;
+  }
+</style>
 </head>
   <body>
     <div id="root"></div>
